[workspace]
resolver = "2"
members = [
    "overview/r01_hello-world",
    "overview/r02_data-type",
    "overview/r23_mod/demo1",
    "rust-lang-book/rlb01_hello-cargo",
    "rust-lang-book/rlb02_guessing-game",
    "programming-rust-book/prb01_gcd",
    "programming-rust-book/prb02_iron-gcd",
    "programming-rust-book/prb03_mandelbrot",
    "programming-rust-book/prb04_ownership",
    "programming-rust-book/prb05_rc", "programming-rust-book/prb021_actix-gcd", "programming-rust-book/prb06_ordering",
]
