[workspace]
members = [
    "overview/r01_hello-world",
    "overview/r02_data-type",
    "overview/r03_define-variable",
    "overview/r04_string",
    "overview/r05_operator",
    "overview/r06_control",
    "overview/r07_function",
    "overview/r08_tuple",
    "overview/r09_array",
    "overview/r10_ownership",
    "overview/r11_borrowing",
    "overview/r12_vec",
    "overview/r13_struct",
    "overview/r14_enum",
    "overview/r15_collection",
    "overview/r16_generic",
    "overview/r17_io",
    "overview/r18_file-operation",
    "overview/r19_closure",
    "overview/r20_thread",
    "overview/r21_err-handling",
    "overview/r22_smart-pointer",
    "overview/r23_mod/demo1",
    "overview/r23_mod/lib",
    "overview/r23_mod/main",
    "overview/r24_type-system",
    "overview/r25_match",
    "overview/r26_async-await",
    "programming-rust-book/prb01_gcd",
    "programming-rust-book/prb021_actix-gcd",
    "programming-rust-book/prb02_iron-gcd",
    "programming-rust-book/prb03_mandelbrot",
    "programming-rust-book/prb04_ownership",
    "programming-rust-book/prb05_rc",
    "programming-rust-book/prb06_ordering",
    "rust-by-example/e01_print",
    "rust-by-example/e02_primitives",
    "rust-exercises/gigasecond",
    "rust-exercises/hello-world",
    "rust-exercises/reverse-string",
    "rust-lang-book/rlb01_hello-cargo",
    "rust-lang-book/rlb02_guessing-game",
    "rust-lang-book/rlb03_variables",
    "rust-lang-book/rlb04_ownership",
    "rust-lang-book/rlb05_structs",
    "rust-lang-book/rlb06_enums",
    "rust-lang-book/rlb07_options",
    "rust-lang-book/rlb08_hashmap",
    "rust-lang-book/rlb09_errors",
    "rust-lang-book/rlb10_generics",
    "rust-lang-book/rlb11_traits",
    "rust-lang-book/rlb12_lifetime",
    "trpl/ch17-01-what-is-oo", "trpl/ch17-02-trait-objects",
    # "rustlings",
]

resolver = "2"
