[workspace]
members = [
    "a-half-hour-to-learn-rust/function-types-closures",
    "a-half-hour-to-learn-rust/loops-iterators",
    "a-half-hour-to-learn-rust/returning-closures",
    "in-action/minigrep",
    "in-action/rust-react-chat",
    "in-action/ssher",
    "overview/r01_hello-world",
    "overview/r02_data-type",
    "overview/r03_define-variable",
    "overview/r04_string",
    "overview/r05_operator",
    "overview/r06_control",
    "overview/r07_function",
    "overview/r08_tuple",
    "overview/r09_array",
    "overview/r10_ownership",
    "overview/r11_borrowing",
    "overview/r12_vec",
    "overview/r13_struct",
    "overview/r14_enum",
    "overview/r15_collection",
    "overview/r16_generic",
    "overview/r17_io",
    "overview/r18_file-operation",
    "overview/r19_closure",
    "overview/r20_thread",
    "overview/r21_err-handling",
    "overview/r22_smart-pointer",
    "overview/r23_mod/demo1",
    "overview/r23_mod/lib",
    "overview/r23_mod/main",
    "overview/r24_type-system",
    "overview/r25_match",
    "overview/r26_async-await",
    "programming-rust-book/prb01_gcd",
    "programming-rust-book/prb021_actix-gcd",
    "programming-rust-book/prb02_iron-gcd",
    "programming-rust-book/prb03_mandelbrot",
    "programming-rust-book/prb04_ownership",
    "programming-rust-book/prb05_rc",
    "programming-rust-book/prb06_ordering",
    "rbt/non_standard_input",
    "rbt/three_and_a_bit",
    "rbt/type_conversion",
    "rust-by-example/e01_print",
    "rust-by-example/e02_primitives",
    "rust-exercises/gigasecond",
    "rust-exercises/hello-world",
    "rust-exercises/reverse-string",
    # "rustlings",
    "the-rust-programming-language/ch01-03-hello-cargo",
    "the-rust-programming-language/ch02-00-guessing-game-tutorial",
    "the-rust-programming-language/ch03-05-control-flow",
    "the-rust-programming-language/ch04-01-what-is-ownership",
    "the-rust-programming-language/ch04-02-references-and-borrowing",
    "the-rust-programming-language/ch04-03-slices",
    "the-rust-programming-language/ch05-01-defining-structs",
    "the-rust-programming-language/ch05-02-example-structs",
    "the-rust-programming-language/ch05-03-method-syntax",
    "the-rust-programming-language/ch06-01-defining-an-enum",
    "the-rust-programming-language/ch06-02-match",
    "the-rust-programming-language/ch06-03-if-let",
    "the-rust-programming-language/ch07-02-defining-modules-to-control-scope-and-privacy/backyard",
    "the-rust-programming-language/ch07-02-defining-modules-to-control-scope-and-privacy/restaurant",
    "the-rust-programming-language/ch07-02-defining-modules-to-control-scope-and-privacy/restaurant_v2",
    "the-rust-programming-language/ch08-00-common-collections",
    "the-rust-programming-language/ch08-02-strings",
    "the-rust-programming-language/ch08-03-hash-maps",
    "the-rust-programming-language/ch09-01-unrecoverable-errors-with-panic",
    "the-rust-programming-language/ch09-02-recoverable-errors-with-result",
    "the-rust-programming-language/ch10-00-generics",
    "the-rust-programming-language/ch10-02-traits",
    "the-rust-programming-language/ch11-01-writing-tests/adder",
    "the-rust-programming-language/ch13-01-closures",
    "the-rust-programming-language/ch13-02-iterators",
    "the-rust-programming-language/ch14-01-release-profiles",
    "the-rust-programming-language/ch14-02-publishing-to-crates-io",
    "the-rust-programming-language/ch14-03-cargo-workspaces",
    "the-rust-programming-language/ch15-00-smart-pointers",
    "the-rust-programming-language/ch15-01-box",
    "the-rust-programming-language/ch15-02-deref",
    "the-rust-programming-language/ch15-03-drop",
    "the-rust-programming-language/ch15-04-rc",
    "the-rust-programming-language/ch15-05-interior-mutability",
    "the-rust-programming-language/ch16-01-threads",
    "the-rust-programming-language/ch16-02-message-passing",
    "the-rust-programming-language/ch16-03-shared-state",
    "the-rust-programming-language/ch17-01-what-is-oo",
    "the-rust-programming-language/ch17-02-trait-objects",
    "the-rust-programming-language/ch17-03-oo-design-patterns",
]

resolver = "2"
