[package]
name = "chat-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
diesel = { version = "2.2.2", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
rand = "0.8.5"
serde = "1.0.204"
serde_json = "1.0.122"
uuid = "1.10.0"
