[package]
name = "rust-react-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13.5"
actix-files = "0.6.6"
actix-web = "4.11.0"
actix-web-actors = "4.3.1"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4.41"
actix-cors = "0.6.5"
