[package]
name = "ssher"
version = "0.1.1"
edition = "2021"
description = "ssher 一个简易的连接远程服务器命令行工具，使用 Rust 语言实现。"
authors = ["Pone Ding <poneding@gmail.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11.0"
